--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
           command: |
             . venv/bin/activate
             make test
+            make ci-test
 
       - store_artifacts:
           path: test-reports
