add codecov to CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,7 @@ jobs:
             . venv/bin/activate
             make test
             make ci-test
+            codecov
 
       - store_artifacts:
           path: test-reports
