--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,12 @@
+image: python:3.5
+
+variables:
+  PYVERSION: 3
+
 test:
   script:
   - apt-get update -qy
-  - apt-get install -y python3 python3-pip make
-  - pip install -r requirements.txt
-  - export PYVERSION=3
+  - pip3 --version
+  - pip3 install -r requirements.txt
+  - pip3 install coverage
   - make test
